  instead of Document. In most cases a simple replacement
  of the return type is enough to upgrade (see MIGRATE.txt).
  (Nikola Tanković, Uwe Schindler, Chris Male, Mike McCandless,
  Robert Muir)

* LUCENE-6067: Accountable.getChildResources has a default
  implementation returning the empty list.  (Robert Muir)

======================= Lucene 5.2.0 =======================

New Features

* LUCENE-6308, LUCENE-6385: Span queries now share document conjunction/intersection
  code with boolean queries, and use two-phased iterators for
  faster intersection by avoiding loading positions in certain cases.
  (Paul Elschot, Terry Smith, Robert Muir via Mike McCandless)

* LUCENE-6352: Added a new query time join to the join module that uses
  global ordinals, which is faster for subsequent joins between reopens.
  (Martijn van Groningen, Adrien Grand)

Optimizations

* LUCENE-6379: IndexWriter.deleteDocuments(Query...) now detects if
  one of the queries is MatchAllDocsQuery and just invokes the much
  faster IndexWriter.deleteAll in that case (Robert Muir, Adrien
  Grand, Mike McCandless)

* LUCENE-6388: Optimize SpanNearQuery when payloads are not present.
  (Robert Muir)

Bug Fixes

* LUCENE-6378: Fix all RuntimeExceptions to throw the underlying root cause.
  (Varun Thacker, Adrien Grand, Mike McCandless)

API Changes

* LUCENE-6377: SearcherFactory#newSearcher now accepts the previous reader
  to simplify warming logic during opening new searchers. (Simon Willnauer)

======================= Lucene 5.1.0 =======================

New Features

* LUCENE-6066: Added DiversifiedTopDocsCollector to misc for collecting no more 
  than a given number of results under a choice of key. Introduces new remove 
  method to core's PriorityQueue. (Mark Harwood)

* LUCENE-3922: Added JapaneseNumberFilter that normalizes Japanese numbers
  in kansuji form to regular/Arabic numbers. (Gaute Lambertsen, Christian Moen)
