@@ -1510,7 +1510,8 @@ name|function
 operator|.
 name|currentScore
 argument_list|(
-name|doc
+name|docID
+argument_list|()
 argument_list|,
 name|fieldName
 argument_list|,
@@ -1526,7 +1527,8 @@ name|docScorer
 operator|.
 name|computePayloadFactor
 argument_list|(
-name|doc
+name|docID
+argument_list|()
 argument_list|,
 name|spans
 operator|.
@@ -1552,7 +1554,7 @@ annotation|@
 name|Override
 DECL|method|setFreqCurrentDoc
 specifier|protected
-name|boolean
+name|void
 name|setFreqCurrentDoc
 parameter_list|()
 throws|throws
@@ -1649,16 +1651,13 @@ operator|.
 name|NO_MORE_POSITIONS
 condition|)
 do|;
-return|return
-literal|true
-return|;
 block|}
 annotation|@
 name|Override
-DECL|method|score
+DECL|method|scoreCurrentDoc
 specifier|public
 name|float
-name|score
+name|scoreCurrentDoc
 parameter_list|()
 throws|throws
 name|IOException
@@ -1666,14 +1665,15 @@ block|{
 return|return
 name|super
 operator|.
-name|score
+name|scoreCurrentDoc
 argument_list|()
 operator|*
 name|function
 operator|.
 name|docScore
 argument_list|(
-name|doc
+name|docID
+argument_list|()
 argument_list|,
 name|fieldName
 argument_list|,
