@@ -569,7 +569,7 @@ annotation|@
 name|Override
 DECL|method|setFreqCurrentDoc
 specifier|protected
-name|boolean
+name|void
 name|setFreqCurrentDoc
 parameter_list|()
 throws|throws
@@ -656,11 +656,6 @@ operator|.
 name|NO_MORE_POSITIONS
 condition|)
 do|;
-return|return
-name|freq
-operator|!=
-literal|0
-return|;
 block|}
 DECL|method|processPayload
 specifier|protected
@@ -710,7 +705,8 @@ name|function
 operator|.
 name|currentScore
 argument_list|(
-name|doc
+name|docID
+argument_list|()
 argument_list|,
 name|term
 operator|.
@@ -735,7 +731,8 @@ name|docScorer
 operator|.
 name|computePayloadFactor
 argument_list|(
-name|doc
+name|docID
+argument_list|()
 argument_list|,
 name|spans
 operator|.
@@ -760,7 +757,8 @@ name|function
 operator|.
 name|currentScore
 argument_list|(
-name|doc
+name|docID
+argument_list|()
 argument_list|,
 name|term
 operator|.
@@ -797,10 +795,10 @@ block|}
 comment|/**        *         * @return {@link #getSpanScore()} * {@link #getPayloadScore()}        * @throws IOException if there is a low-level I/O error        */
 annotation|@
 name|Override
-DECL|method|score
+DECL|method|scoreCurrentDoc
 specifier|public
 name|float
-name|score
+name|scoreCurrentDoc
 parameter_list|()
 throws|throws
 name|IOException
@@ -830,7 +828,7 @@ block|{
 return|return
 name|super
 operator|.
-name|score
+name|scoreCurrentDoc
 argument_list|()
 return|;
 block|}
@@ -846,7 +844,8 @@ name|function
 operator|.
 name|docScore
 argument_list|(
-name|doc
+name|docID
+argument_list|()
 argument_list|,
 name|term
 operator|.
