@@ -525,7 +525,7 @@ switch|switch
 condition|(
 name|acceptPosition
 argument_list|(
-name|this
+name|in
 argument_list|)
 condition|)
 block|{
@@ -658,7 +658,7 @@ switch|switch
 condition|(
 name|acceptPosition
 argument_list|(
-name|this
+name|in
 argument_list|)
 condition|)
 block|{
