@@ -62,6 +62,20 @@ name|lucene
 operator|.
 name|search
 operator|.
+name|TwoPhaseIterator
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
 name|similarities
 operator|.
 name|Similarity
@@ -80,26 +94,14 @@ name|SpanScorer
 extends|extends
 name|Scorer
 block|{
+comment|/** underlying spans we are scoring from */
 DECL|field|spans
 specifier|protected
+specifier|final
 name|Spans
 name|spans
 decl_stmt|;
-DECL|field|doc
-specifier|protected
-name|int
-name|doc
-decl_stmt|;
-DECL|field|freq
-specifier|protected
-name|float
-name|freq
-decl_stmt|;
-DECL|field|numMatches
-specifier|protected
-name|int
-name|numMatches
-decl_stmt|;
+comment|/** similarity used in default score impl */
 DECL|field|docScorer
 specifier|protected
 specifier|final
@@ -108,6 +110,27 @@ operator|.
 name|SimScorer
 name|docScorer
 decl_stmt|;
+comment|/** accumulated sloppy freq (computed in setFreqCurrentDoc) */
+DECL|field|freq
+specifier|protected
+name|float
+name|freq
+decl_stmt|;
+comment|/** number of matches (computed in setFreqCurrentDoc) */
+DECL|field|numMatches
+specifier|protected
+name|int
+name|numMatches
+decl_stmt|;
+DECL|field|lastScoredDoc
+specifier|private
+name|int
+name|lastScoredDoc
+init|=
+operator|-
+literal|1
+decl_stmt|;
+comment|// last doc we called setFreqCurrentDoc() for
 DECL|method|SpanScorer
 specifier|protected
 name|SpanScorer
@@ -153,55 +176,30 @@ argument_list|(
 name|spans
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
-name|doc
-operator|=
-operator|-
-literal|1
-expr_stmt|;
 block|}
 annotation|@
 name|Override
 DECL|method|nextDoc
 specifier|public
+specifier|final
 name|int
 name|nextDoc
 parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|int
-name|prevDoc
-init|=
-name|doc
-decl_stmt|;
-name|doc
-operator|=
+return|return
 name|spans
 operator|.
 name|nextDoc
 argument_list|()
-expr_stmt|;
-if|if
-condition|(
-name|doc
-operator|!=
-name|NO_MORE_DOCS
-condition|)
-block|{
-name|setFreqCurrentDoc
-argument_list|()
-expr_stmt|;
-block|}
-return|return
-name|doc
 return|;
 block|}
 annotation|@
 name|Override
 DECL|method|advance
 specifier|public
+specifier|final
 name|int
 name|advance
 parameter_list|(
@@ -211,38 +209,53 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|int
-name|prevDoc
-init|=
-name|doc
-decl_stmt|;
-name|doc
-operator|=
+return|return
 name|spans
 operator|.
 name|advance
 argument_list|(
 name|target
 argument_list|)
-expr_stmt|;
+return|;
+block|}
+comment|/**     * Ensure setFreqCurrentDoc is called, if not already called for the current doc.    */
+DECL|method|ensureFreq
+specifier|private
+specifier|final
+name|void
+name|ensureFreq
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|int
+name|currentDoc
+init|=
+name|spans
+operator|.
+name|docID
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|doc
+name|lastScoredDoc
 operator|!=
-name|NO_MORE_DOCS
+name|currentDoc
 condition|)
 block|{
 name|setFreqCurrentDoc
 argument_list|()
 expr_stmt|;
+name|lastScoredDoc
+operator|=
+name|currentDoc
+expr_stmt|;
 block|}
-return|return
-name|doc
-return|;
 block|}
+comment|/**    * Sets {@link #freq} and {@link #numMatches} for the current document.    *<p>    * This will be called at most once per document.    */
 DECL|method|setFreqCurrentDoc
 specifier|protected
-name|boolean
+name|void
 name|setFreqCurrentDoc
 parameter_list|()
 throws|throws
@@ -426,58 +439,79 @@ literal|"incorrect final end position, spans="
 operator|+
 name|spans
 assert|;
+block|}
+comment|/**    * Score the current doc. The default implementation scores the doc     * with the similarity using the slop-adjusted {@link #freq}.    */
+DECL|method|scoreCurrentDoc
+specifier|protected
+name|float
+name|scoreCurrentDoc
+parameter_list|()
+throws|throws
+name|IOException
+block|{
 return|return
-literal|true
+name|docScorer
+operator|.
+name|score
+argument_list|(
+name|spans
+operator|.
+name|docID
+argument_list|()
+argument_list|,
+name|freq
+argument_list|)
 return|;
 block|}
 annotation|@
 name|Override
 DECL|method|docID
 specifier|public
+specifier|final
 name|int
 name|docID
 parameter_list|()
 block|{
 return|return
-name|doc
+name|spans
+operator|.
+name|docID
+argument_list|()
 return|;
 block|}
 annotation|@
 name|Override
 DECL|method|score
 specifier|public
+specifier|final
 name|float
 name|score
 parameter_list|()
 throws|throws
 name|IOException
 block|{
-name|float
-name|s
-init|=
-name|docScorer
-operator|.
-name|score
-argument_list|(
-name|doc
-argument_list|,
-name|freq
-argument_list|)
-decl_stmt|;
+name|ensureFreq
+argument_list|()
+expr_stmt|;
 return|return
-name|s
+name|scoreCurrentDoc
+argument_list|()
 return|;
 block|}
 annotation|@
 name|Override
 DECL|method|freq
 specifier|public
+specifier|final
 name|int
 name|freq
 parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|ensureFreq
+argument_list|()
+expr_stmt|;
 return|return
 name|numMatches
 return|;
@@ -486,12 +520,16 @@ comment|/** Returns the intermediate "sloppy freq" adjusted for edit distance   
 comment|// only public so .payloads can see it.
 DECL|method|sloppyFreq
 specifier|public
+specifier|final
 name|float
 name|sloppyFreq
 parameter_list|()
 throws|throws
 name|IOException
 block|{
+name|ensureFreq
+argument_list|()
+expr_stmt|;
 return|return
 name|freq
 return|;
@@ -500,6 +538,7 @@ annotation|@
 name|Override
 DECL|method|cost
 specifier|public
+specifier|final
 name|long
 name|cost
 parameter_list|()
@@ -508,6 +547,22 @@ return|return
 name|spans
 operator|.
 name|cost
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|asTwoPhaseIterator
+specifier|public
+specifier|final
+name|TwoPhaseIterator
+name|asTwoPhaseIterator
+parameter_list|()
+block|{
+return|return
+name|spans
+operator|.
+name|asTwoPhaseIterator
 argument_list|()
 return|;
 block|}
