@@ -585,9 +585,27 @@ annotation|@
 name|Override
 DECL|method|setFreqCurrentDoc
 specifier|protected
-name|boolean
+name|void
 name|setFreqCurrentDoc
 parameter_list|()
+block|{
+throw|throw
+operator|new
+name|UnsupportedOperationException
+argument_list|(
+name|UNSUPPORTED_MSG
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
+DECL|method|scoreCurrentDoc
+specifier|protected
+name|float
+name|scoreCurrentDoc
+parameter_list|()
+throws|throws
+name|IOException
 block|{
 throw|throw
 operator|new
